[tool.poetry]
name = "discord-fix-twitter-embeds"
version = "0.1.0"
description = ""
authors = ["somakai_sumasi <ueki@novasto.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
python-dotenv = "^1.0.0"
black = "^23.9.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
